--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <div class=" box">
             <div class="box-content">
                 <h2>Player's paradise starts here</h2>
-                <div id="img"  style="background-image: url('/images/box1.jpg');"></div>
+                <div id="img"  style="background-image: url('images/box1.jpg');"></div>
                 <a href="#">shop now</a>
             </div>
         </div>
@@ -86,21 +86,21 @@
         <div class=" box">
             <div class="box-content">
                 <h2>Shop activity trackers and smartwatches</h2>
-                <div id="img"  style="background-image: url('/images/box2.jpg');"></div>
+                <div id="img"  style="background-image: url('images/box2.jpg');"></div>
                 <a href="#">shop now</a>
             </div>
         </div>
         <div class=" box">
             <div class="box-content">
                 <h2>Creating business solutions</h2>
-                <div id="img"  style="background-image: url('/images/box3.jpg');"></div>
+                <div id="img"  style="background-image: url('images/box3.jpg');"></div>
                 <a href="#">shop now</a>
             </div>
         </div>
         <div class=" box">
             <div class="box-content">
                 <h2>Shop Best deals in Fashion</h2>
-                <div id="img"  style="background-image: url('/images/SHOP\ DEALS\ IN\ FASHION.jpg');"></div>
+                <div id="img"  style="background-image: url('images/SHOP\ DEALS\ IN\ FASHION.jpg');"></div>
                 <a href="#">shop now</a>
             </div>
         </div>
@@ -108,7 +108,7 @@
         <div class=" box">
             <div class="box-content">
                 <h2>Health and Beauty</h2>
-                <div id="img"  style="background-image: url('/images/HEALTH\ N\ BEAUTY.jpg');"></div>
+                <div id="img"  style="background-image: url('images/HEALTH\ N\ BEAUTY.jpg');"></div>
                 <a href="#">shop now</a>
             </div>
         </div>
@@ -116,21 +116,21 @@
         <div class=" box">
             <div class="box-content">
                 <h2>Dress under 30$</h2>
-                <div id="img"  style="background-image: url('/images/DRESS UNDER 30$.jpg');"></div>
+                <div id="img"  style="background-image: url('images/DRESS UNDER 30$.jpg');"></div>
                 <a href="#">shop now</a>
             </div>
         </div>
         <div class=" box">
             <div class="box-content">
                 <h2>Kitchen</h2>
-                <div id="img"  style="background-image: url('/images/KITCHEN.jpg');"></div>
+                <div id="img"  style="background-image: url('images/KITCHEN.jpg');"></div>
                 <a href="#">shop now</a>
             </div>
         </div>
         <div class=" box">
             <div class="box-content">
                 <h2>Toys under 25$</h2>
-                <div id="img"  style="background-image: url('/images/box4.jpg');"></div>
+                <div id="img"  style="background-image: url('images/box4.jpg');"></div>
                 <a href="#">shop now</a>
             </div>
         </div>
